fix news page margin top on mobile screens

--- a/styles/News.module.scss
+++ b/styles/News.module.scss
@@ -40,3 +40,9 @@
     
   }
 }
+
+@media (max-width: 440px) {
+  .page-title {
+    margin-top: 100px;
+  }
+}
